# parallel-trigrams

./: .gitignore  CMakeLists.txt  README.md  agent.md  todo.md
exec/: AUBsanitizer.sh  Msanitizer.sh  debug_execution.sh  download_data.sh  download_input.sh  execution.sh  profiling.sh  release_execution.sh  sanitizer.sh
exec/script_download_input/: main.py
parallel/include/: arena.h  hash_table.h
parallel/src/: arena.c  hash_table.c  main_functions.c
report/: bibliografia.bib  main.tex
report/src/: 1-introduction.tex  2-sequential.tex  3-parallel.tex  4-analysis.tex  copertina.tex
sequential/: CMakeLists.txt
sequential/data/: input.txt  normalized_text.txt
sequential/include/: config.h.in  hash_table.h  helper_functions.h  main_functions.h  my_utils.h  pre_processing.h  statistics.h
sequential/result_profiling/: profile.txt
sequential/src/: hash_table.c  helper_functions.c  main.c  main_functions.c  my_utils.c  pre_processing.c  statistics.c
